switch to container-registry.oracle.com/database/free as gvenzl has persisten storage issues

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,15 +9,15 @@ services:
       - oradata:/opt/oracle/oradata
     restart: no
     healthcheck:
-      test: ["CMD", "healthcheck.sh"]
-      #interval: 10s
+      #test: ["CMD", "healthcheck.sh"]
+      interval: 10s
       timeout: 5s
       retries: 10
       start_period: 5s
       #start_interval: 5s
-    image: gvenzl/oracle-free:23.5-full
-    container_name: apex-24-1-23ai
-    #image: container-registry.oracle.com/database/free:23.5.0.0
+    container_name: local-23ai
+    image: container-registry.oracle.com/database/free:23.5.0.0
+    #image: gvenzl/oracle-free:23.5-full
 
   ords:
     ports:
@@ -33,8 +33,8 @@ services:
     depends_on:
       23ai:
         condition: service_healthy
-    image: container-registry.oracle.com/database/ords-developer:24.3.0
-    container_name: apex-24-1-ords
+    image: container-registry.oracle.com/database/ords-developer:24.3.1
+    container_name: local-ords
 
 networks:
   default:
